# Acs-Projects

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/project/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/project/migrations/: 0001_initial.py  0002_project_status_alter_projectfile_attachment.py  0002_projectfile.py  0003_alter_project_status.py  0004_remove_project_status.py  0005_project_completion_date_project_is_completed.py  0006_remove_project_completion_date_and_more.py  0007_project_is_completed.py  0008_project_completion_date.py  0009_alter_project_completion_date.py  0010_alter_project_completion_date.py  0011_projectnote_created_at_projectnote_updated_at.py
apps/task/: models.py  views.py
apps/task/migrations/: 0001_initial.py
apps/todolist/: forms.py  models.py  views.py
apps/todolist/migrations/: 0001_initial.py  0002_rename_created_by_todolist_author.py  0003_todolist_created_at_todolist_updated_at.py  (+1 more)
config/: settings.py  urls.py
proxy/: Dockerfile  default.conf
static/src/: styles.css
templates/: _base.html  home.html
templates/account/: login.html  logout.html
templates/project/: add.html  add_note.html  edit.html  edit_note.html  note_detail.html  project.html  projects.html  upload_file.html
templates/registration/: login.html
templates/todolist/: add.html  edit.html  todolist.html
