[tool.poetry]
name = "acs-projects"
version = "0.1.0"
description = ""
authors = ["kostasvit <kostasvit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-crispy-forms = "^2.1"
django-allauth = "^0.60.0"
django-environ = "^0.11.2"
dj-database-url = "^2.1.0"
reportlab = "^4.0.9"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
